@startuml
class screens.MedicationListActivity {
- Map<String,Medication> medicationMap
~ NotificationService notificationService
- MedicationListAdapter adapter
- User user
- String uid
- EditText editSearch
- Spinner spinnerSearchType
# void onCreate(Bundle)
# void onResume()
- void setupSearch()
- void fetchTodayUsageLogs()
- void logMedicationStatus(Medication,String,MedicationStatus)
- void loadMedicationsFromCache()
- void fetchMedicationsFromServer()
- void updateUserCache()
- void updateMedicationList(List<Medication>)
- void saveMedication(Medication)
- void checkNotificationPermissionAndSchedule(Medication)
# void onPermissionsResult(Map<String,Boolean>)
- void updateMedication(Medication)
- void deleteMedicationById(Medication)
- void openMedicationDialog(Medication)
- void filterMedications(String)
}


class screens.MedicationImagesTableActivity {
- List<ImageData> allImages
# ImageUtil imageUtil
- MedicationImagesTableAdapter adapter
- TextInputEditText etSearch
- ActivityResultLauncher<PickVisualMediaRequest> photoPickerLauncher
# void onCreate(Bundle)
# void onResume()
- void checkGalleryPermission()
- void openGallery()
# void onPermissionsResult(Map<String,Boolean>)
- void loadImages()
- void filterImages()
- void uploadImage(Uri)
- void deleteImageAndReorder(ImageData)
- void reorderImages()
}


class screens.UsersTableActivity {
- Map<String,User> usersMap
- UsersTableAdapter adapter
- EditText editSearch
- Spinner spinnerSearchType
- User currentUser
# void onCreate(Bundle)
- void setupSearch()
- void refreshList()
+ void onResume()
- void loadUsers()
- void handleToggleAdmin(User)
- void handleDeleteUser(User)
- void filterUsers(String)
}


class screens.UserStatsActivity {
- List<User> selectableUsers
# CalendarUtil calendarUtil
- ViewPager2 viewPagerGraphs
- GraphAdapter graphAdapter
- TabLayout tabLayoutGraphs
- RecyclerView recyclerMedicationLogs
- MedicationUsageAdapter usageAdapter
- User currentUser
- User loggedInUser
- Spinner spinnerUserSelector
- TextView txtSelectedDate
- MaterialButton btnClearMedLogs
- String filteredDate
- List<MedicationUsage> allLogs
# void onCreate(Bundle)
# void onResume()
- void setupGraphsUI()
- void openCalendar()
- void applyFilter()
- void setupAdminUI()
- void refreshData()
- void fetchLatestUserData()
- void setupGraphs()
- void setupMedicationLogs()
- void loadMedicationLogs()
- void clearMedicationLogs()
- void clearDayMedicationLogs()
- void updateResetButtonState()
}




bases.BaseActivity <|-- screens.MedicationListActivity
bases.BaseActivity <|-- screens.MedicationImagesTableActivity
bases.BaseActivity <|-- screens.UsersTableActivity
bases.BaseActivity <|-- screens.UserStatsActivity
@enduml